row candidate handling, fixed