@@ -2,10 +2,7 @@ package com.sudoku.dataholder;
 
 import com.sudoku.Field;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class DataHolder {
@@ -18,29 +15,30 @@ public class DataHolder {
     private Map<Integer, List<Integer>> initPositions() {
         Map<Integer, List<Integer>> candidates = new HashMap<>();
         for (int i = 0; i < Field.FIELD_CAPACITY; i++) {
-            candidates.put(i, List.of(1, 2, 3, 4, 5, 6, 7, 8, 9));
+            candidates.put(i, Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9));
         }
         return candidates;
     }
 
     public void reset() {
         for (int i = 0; i < Field.FIELD_CAPACITY; i++) {
-            positionCandidates.replace(i, List.of(1, 2, 3, 4, 5, 6, 7, 8, 9));
+            positionCandidates.replace(i, Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9));
         }
     }
 
     public List<Integer> getPositionCandidates(int pos) {
-        return positionCandidates.getOrDefault(pos, List.of());
+        return positionCandidates.getOrDefault(pos, Arrays.asList());
     }
 
     public void setPositionOwner(int pos, int owner, int row, int col, int cube){
         Field sField = Field.getInstance();
         int previousOwner = sField.getField(pos);
+        if (previousOwner == owner) return;
 
         if (owner == 0) {
-            positionCandidates.replace(pos, List.of(1, 2, 3, 4, 5, 6, 7, 8, 9));
+            positionCandidates.replace(pos, Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9));
         } else {
-            positionCandidates.replace(pos, List.of(owner));
+            positionCandidates.replace(pos, Arrays.asList(owner));
         }
 
         reduceRowsCandidates(pos, owner, row, sField, previousOwner);
@@ -50,14 +48,14 @@ public class DataHolder {
 
     private void reduceRowsCandidates(int pos, int owner, int row, Field sField, int previousOwner) {
         //reduce row candidates
-        if (previousOwner == owner) return;
         List<Integer> rowPositions = sField.getRowPositions(row);
         if (owner == 0) {
-            appendCandidate(pos, previousOwner, rowPositions);
+            List<Integer>filter = appendCandidate(pos, previousOwner, rowPositions);
+            removeCandidates(filter, pos);
         } else {
             for (Integer position : rowPositions) {
                 if (position != pos) {
-                    List<Integer> values = positionCandidates.getOrDefault(position, List.of());
+                    List<Integer> values = positionCandidates.getOrDefault(position, Arrays.asList());
                     List<Integer> reducedValues = values.stream().filter(x -> x != owner).collect(Collectors.toList());
                     positionCandidates.replace(position, reducedValues);
                 }
@@ -68,14 +66,31 @@ public class DataHolder {
         }
     }
 
-    private void appendCandidate(int pos, int previousOwner, List<Integer> rowPositions) {
+    private List<Integer> appendCandidate(int pos, int previousOwner, List<Integer> rowPositions) {
+        List<Integer> valuesToFilterOut = new ArrayList<>(); //on reset position
         for (Integer position : rowPositions) {
             if (position != pos) {
-                List<Integer> values = positionCandidates.getOrDefault(position, List.of());
-                values.add(previousOwner);
-                Collections.sort(values);
-                positionCandidates.replace(position, values);
+                List<Integer> values = positionCandidates.getOrDefault(position, Arrays.asList());
+                if (values.size() == 1) {
+                    valuesToFilterOut.add(values.get(0));
+                } else {
+                    /* only for uncertain positions */
+                    values.add(previousOwner);
+                    Collections.sort(values);
+                    positionCandidates.replace(position, values);
+                }
             }
         }
+        return valuesToFilterOut;
+    }
+
+    private void removeCandidates(List<Integer> filter, int pos) {
+        List<Integer> values = makeMutable(positionCandidates.get(pos));
+        values.removeAll(filter);
+        positionCandidates.replace(pos, values);
+    }
+
+    private <T> ArrayList<T> makeMutable(List<T> inList){
+        return new ArrayList<>(inList);
     }
 }
